--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^5.0.3",
     "moment": "^2.22.1",
     "vue": "^2.5.2",
+    "vue-firestore": "^0.2.9",
     "vue-router": "^3.0.1",
     "vuetify": "^1.0.18",
     "vuex": "^3.0.1"
