--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "firebase": "^5.0.3",
     "lodash": "^4.17.11",
     "moment": "^2.22.1",
+    "tiptap": "^0.16.0",
+    "tiptap-extensions": "^0.18.0",
     "vue": "^2.5.2",
     "vue-firestore": "^0.2.9",
     "vue-moment": "^4.0.0",
@@ -25,6 +27,7 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.3.1",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
