--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
   },
   "dependencies": {
     "firebase": "^5.0.3",
+    "fuse.js": "^3.2.1",
     "lodash": "^4.17.11",
     "moment": "^2.22.1",
+    "portal-vue": "^1.4.0",
+    "tippy.js": "^3.0.3",
     "tiptap": "^0.16.0",
     "tiptap-extensions": "^0.18.0",
     "vue": "^2.5.2",
     "vue-firestore": "^0.2.9",
     "vue-moment": "^4.0.0",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.0.18",
+    "vuetify": "^1.2.6",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
