--- a/firebase.json
+++ b/firebase.json
@@ -10,6 +10,9 @@
   },
   "hosting": {
     "public": "dist",
+    "predeploy": [
+      "npm run build"
+    ],
     "ignore": [
       "firebase.json",
       "**/.*",
